--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -47,6 +47,33 @@
             A munkaviszonyt - eltérő megállapodás hiányában - bármely munkáltató vagy a munkavállaló jognyilatkozata megszünteti.
           </p>
         </div>
+        <p>
+          Miután a munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval, így annak munkavégzési kötelessége a feladatok esedékességéhez igazodik. Mindez a munkáltató kétségtelen előnye. Az Mt. szerint minimum 3 nappal korábban a munkáltató közli a munkavégzés időpontját, bár a törvény erről nem rendelkezik, a feleknek célszerű a munkaszerződésben megállapodniuk a foglalkoztatással nem járó időszakban a kapcsolattartás módjáról.
+        </p>
+        <div class="offer">
+          <div class="top">
+            ÖNNEK AJÁNLJUK
+          </div>
+          <div class="bottom">
+            <div class="leftSide">
+              <h5>
+                Sárga lámpa a társadalombiztosítási jogviszony ellenőrzésében
+              </h5>
+              <p>
+                A sárga lámpa azoknál a személyeknél jelenik meg, akik egészségügyi szolgáltatásra azáltal lettek jogosultak, hogy arra vonatkozó megállapodást kötött
+              </p>
+            </div>
+            <div class="rightSide">
+              <img src="/assets/pic/flamings.png" alt="">
+            </div>
+          </div>
+        </div>
+        <h4>
+          Ha sok lenne a napi 8 óra (I.) - a részmunkaidő egy különös esete
+        </h4>
+        <p>
+          A részmunkaidő egyik különös esete - ahogyan mondjuk, atipikus munkaviszony - a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §] Miután a munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval, így annak munkavégzési kötelessége a feladatok esedékességéhez igazodik. Mindez a munkáltató kétségtelen előnye. Az Mt. szerint minimum 3 nappal korábban a munkáltató közli a munkavégzés időpontját, bár a törvény erről nem rendelkezik, a feleknek célszerű a munkaszerződésben megállapodniuk a foglalkoztatással nem járó időszakban a kapcsolattartás módjáról.
+        </p>
       </div>
     </article>
   </div>
