--- a/JegyzoInfo/ClientApp/src/varsAndMixins.scss
+++ b/JegyzoInfo/ClientApp/src/varsAndMixins.scss
@@ -1,4 +1,5 @@
 $blue: #30BAEF;
+$darkBlue: #5B7284;
 $dark: #121212;
 $dark2: #1E252B;
 $lightBorder: #DCDFE1;
@@ -6,3 +7,4 @@ $lightBorder: #DCDFE1;
 $slateLight: #A3B2B7;
 $quoteColor: #5B7284;
 $orange: #FA6F3C;
+$lightGray: #F1F2F3;
