--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -75,6 +75,37 @@
           A részmunkaidő egyik különös esete - ahogyan mondjuk, atipikus munkaviszony - a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §] Miután a munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval, így annak munkavégzési kötelessége a feladatok esedékességéhez igazodik. Mindez a munkáltató kétségtelen előnye. Az Mt. szerint minimum 3 nappal korábban a munkáltató közli a munkavégzés időpontját, bár a törvény erről nem rendelkezik, a feleknek célszerű a munkaszerződésben megállapodniuk a foglalkoztatással nem járó időszakban a kapcsolattartás módjáról.
         </p>
       </div>
+      <div class="related">
+        <h5>
+          Kapcsolódó fejezetek a tudástárban
+        </h5>
+        <div class="chaptersWrap">
+          <div class="chapter">
+            Településképi eljárás
+          </div>
+          <div class="chapter">
+            Településképi eljárás Lorem ipsum dolor sit amet.
+          </div>
+        </div>
+      </div>
+      <div class="ctaWrap">
+        <button class="orange">
+          Érdekel az előfizetés
+        </button>
+      </div>
+      <div class="related">
+        <h5>
+          Kapcsolódó jogszabályok
+        </h5>
+        <div class="chaptersWrap">
+          <div class="chapter chapterJsz">
+            5/2003. (II. 19.) ESzCsM rendelet
+          </div>
+          <div class="chapter chapterJsz">
+            2017. évi CLIII. törvény az adóhatóság által foganatosítandó végrehajtási eljárásokról
+          </div>
+        </div>
+      </div>
     </article>
   </div>
 </div>
