--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -11,6 +11,11 @@
     article{
       background-color: white;
       padding: 60px 190px;
+      margin-bottom: 160px;
+      @media(max-width: 991px){
+        padding-left: 30px;
+        padding-right: 30px;
+      }
       h1{
         font-weight: 700 !important;
       }
@@ -24,27 +29,52 @@
           color: white;
           padding: 3px 6px;
           margin-right: 10px;
+          margin-bottom: 5px;
         }
       }
       .infosActions{
-        margin-top: 36px;
+        margin-top: 30px;
         padding-bottom: 20px;
         border-bottom: 1px solid $lightBorder;
         display: flex;
         justify-content: space-between;
+        @media(max-width: 991px){
+          display: block;
+          .delimSmallRight{
+            &::after{
+              content: none;
+            }
+          }
+        }
         .leftSide{
+          display: flex;
+          @media(max-width: 991px){
+            display: block;
+          }
+          span{
+            display: block;
+          }
           .clockIcon{
             display: inline-block;
             margin-left: 14px;
+            @media(max-width: 991px){
+              margin-left: 0;
+            }
           }
         }
         .rightSide{
+          @media(max-width: 991px){
+            margin-top: 15px;
+          }
           img{
             margin-left: 20px;
             cursor: pointer;
             display: inline-block;
             &:hover{
               transform: scale(1.2);
+            }
+            &:first-child{
+              margin-left: 0;
             }
           }
         }
@@ -68,6 +98,9 @@
           border-left: 4px solid $orange;
           padding: 18px 40px 18px 0;
           color: $quoteColor;
+          @media(max-width: 575px){
+            margin-left: 10px;
+          }
           p{
             margin: 0;
             font-style: italic;
@@ -83,19 +116,25 @@
         }
         .offer{
           .top{
-            height: 38px;
             background-color: $darkBlue;
             color: white;
-            padding: 0 64px;
+            padding: 6px 64px;
             display: flex;
             align-items: center;
           }
           .bottom{
             background-color: $lightGray;
-            display: flex;
+            display: grid;
+            grid-template-columns: 5fr 2fr;
             justify-content: space-between;
+            @media(max-width: 767px){
+              display: block;
+            }
             .leftSide{
               padding: 15px 15px 15px 64px;
+              @media(max-width: 767px){
+                padding: 15px;
+              }
               h5{
                 color: $dark;
               }
@@ -106,11 +145,31 @@
             }
             .rightSide{
               img{
-                max-width: 186px;
+                width: 100%;
               }
             }
           }
         }
+      }
+      .related{
+        padding-top: 10px;
+        h5{
+          margin-bottom: 20px;
+        }
+        .chaptersWrap{
+          .chapter{
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 19px 40px;
+            margin-bottom: 10px;
+            &.chapterJsz{
+              color: $blueStandard;
+            }
+          }
+        }
+      }
+      .ctaWrap{
+        margin: 62px 0;
+        text-align: center;
       }
     }
   }
