--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -32,6 +32,15 @@
           <img src="/assets/img/iconFacebook.svg" alt="" />
         </div>
       </div>
+      <div class="infoAlert">
+        <img src="/assets/img/iconI.svg" alt="" />
+        <span>
+          Ezt a cikket frissítettük a legújabb információkkal!
+        </span>
+        <button class="smallBlue">
+          Olvassa el itt!
+        </button>
+      </div>
       <div class="lead">
         A munkáltatók jelentős része töri azon a fejét, hogy működési igényeihez igazodóan miként szervezze a munkaidőt, és ezzel szükségszerű összefüggésben hogyan ossza be az alkalmazottaik pihenőidejét. A közelmúlt híradásai ugyan a munkaerő-hiány problémájával vannak tele, de bizony előfordulhat, hogy a munkavállaló alól „fogy el a munka”, vagyis nincs szükség a foglalkoztatott teljes kapacitására.
       </div>
