--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -171,6 +171,18 @@
         margin: 62px 0;
         text-align: center;
       }
+      .infoAlert{
+        font-size: 14px;
+        margin-top: 16px;
+        border: 1px solid $orange;
+        padding: 10px 20px;
+        img{
+          margin-right: 20px;
+        }
+        span{
+          margin-right: 45px;
+        }
+      }
     }
   }
 }
