--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -79,6 +79,12 @@ button, button:focus{
       }
     }
   }
+  &.smallBlue{
+    border: 1px solid $blueStandard;
+    color: $blueStandard;
+    padding: 2px 22px;
+    background-color: transparent;
+  }
 }
 
 .clockIcon{
