--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -84,6 +84,23 @@
           A részmunkaidő egyik különös esete - ahogyan mondjuk, atipikus munkaviszony - a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §] Miután a munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval, így annak munkavégzési kötelessége a feladatok esedékességéhez igazodik. Mindez a munkáltató kétségtelen előnye. Az Mt. szerint minimum 3 nappal korábban a munkáltató közli a munkavégzés időpontját, bár a törvény erről nem rendelkezik, a feleknek célszerű a munkaszerződésben megállapodniuk a foglalkoztatással nem járó időszakban a kapcsolattartás módjáról.
         </p>
       </div>
+      <div class="freshContent">
+        <h5>
+          FRISSÍTETT TARTALOM!
+        </h5>
+        <h5>
+          Ha sok lenne a napi 8 óra (I.) - a részmunkaidő egy különös esete
+        </h5>
+        <p>
+          A részmunkaidő egyik különös esete – ahogyan mondjuk, atipikus munkaviszony – a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §]
+        </p>
+        <h5>
+          Ha sok lenne a napi 8 óra (I.) - a részmunkaidő egy különös esete
+        </h5>
+        <p>
+          A részmunkaidő egyik különös esete – ahogyan mondjuk, atipikus munkaviszony – a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §]
+        </p>
+      </div>
       <div class="related">
         <h5>
           Kapcsolódó fejezetek a tudástárban
