--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -34,12 +34,22 @@
       </div>
       <div class="infoAlert">
         <img src="/assets/img/iconI.svg" alt="" />
-        <span>
+        <p>
           Ezt a cikket frissítettük a legújabb információkkal!
-        </span>
+        </p>
         <button class="smallBlue">
           Olvassa el itt!
         </button>
+      </div>
+      <div class="infoAlert">
+        <img src="/assets/img/iconI.svg" alt="" />
+        <p>
+          Ez a tartalom 1547 napja jelent meg, lehetséges, hogy az itt szereplő információk már nem aktuálisak.
+          Olvassa a témában megjelent legfrissebb cikkünket:
+          <a href="#">
+            Az Országgyűlés előtt az új adócsomag
+          </a>
+        </p>
       </div>
       <div class="lead">
         A munkáltatók jelentős része töri azon a fejét, hogy működési igényeihez igazodóan miként szervezze a munkaidőt, és ezzel szükségszerű összefüggésben hogyan ossza be az alkalmazottaik pihenőidejét. A közelmúlt híradásai ugyan a munkaerő-hiány problémájával vannak tele, de bizony előfordulhat, hogy a munkavállaló alól „fogy el a munka”, vagyis nincs szükség a foglalkoztatott teljes kapacitására.
