--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -5,6 +5,21 @@
         Vissza
       </button>
     </div>
+    <div class="bigPicture">
+      <div class="bottomStuff">
+        <h1>
+          Térítési díj egészségügyi szolgáltatásra kötött megállapodásnál és érvénytelen TAJ szám esetén
+        </h1>
+        <div class="labelsWrap">
+          <span>
+            számviteli szabályzatok
+          </span>
+          <span>
+            TB JÁRULÉK
+          </span>
+        </div>
+      </div>
+    </div>
     <article>
       <h1>
         Térítési díj egészségügyi szolgáltatásra kötött megállapodásnál és érvénytelen TAJ szám esetén
