--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -29,6 +29,10 @@
       display: flex;
       flex-direction: row;
       align-items: flex-end;
+      @media(max-width: 991px){
+        padding-left: 30px;
+        padding-right: 30px;
+      }
       .bottomStuff{
         position: relative;
         margin-bottom: 35px;
