--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -1,10 +1,6 @@
 <div class="articleWrap">
   <div class="container">
-    <div class="backButtonWrap">
-      <button class="backButton">
-        Vissza
-      </button>
-    </div>
+    <app-back></app-back>
     <div class="bigPicture">
       <div class="bottomStuff">
         <h1>
