--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -38,22 +38,24 @@
             <h2>
               JEGYZŐBLOG
             </h2>
-            <div class="whiteBack">
-              <h3>
-                Közfoglalkoztatási programok pénzügyi-számviteli dokumentálása
-              </h3>
-              <span class="clockIcon">
-                2020-01-08
-              </span>
-              <p>
-                A Magyar Közlöny 222. számában jelent meg a kötelező legkisebb munkabér (minimálbér) és a garantált bérminimum
-                megállapításáról szóló 367/2019 (XII.30.) Korm.rendelet. (http://www.kozlonyok.hu/nkonline/ MKPDF/hiteles/mk19222.pdf)
-                <br/>A Korm.rendeletben foglaltak szerint 2020. január 1-től:
-              </p>
-              <hr/>
-            </div>
+            <a routerLink="/cikk">
+              <div class="whiteBack">
+                <h3>
+                  Közfoglalkoztatási programok pénzügyi-számviteli dokumentálása
+                </h3>
+                <span class="clockIcon">
+                  2020-01-08
+                </span>
+                <p>
+                  A Magyar Közlöny 222. számában jelent meg a kötelező legkisebb munkabér (minimálbér) és a garantált bérminimum
+                  megállapításáról szóló 367/2019 (XII.30.) Korm.rendelet. (http://www.kozlonyok.hu/nkonline/ MKPDF/hiteles/mk19222.pdf)
+                  <br/>A Korm.rendeletben foglaltak szerint 2020. január 1-től:
+                </p>
+                <hr/>
+              </div>
+            </a>
             <div class="buttonWrap">
-                <a routerLink="/cikk">
+                <a routerLink="/cikkek">
                   <button class="transparent">
                     Még több cikk
                   </button>
