--- a/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
@@ -52,6 +52,36 @@
               </div>
             </div>
           </article>
+          <article class="withPic">
+            <div class="leftSide">
+              <h5>
+                Változtak-e az EKÁER-bejelentéssel kapcsolatos szabályok a BREXIT miatt?
+              </h5>
+            </div>
+            <div class="rightSide">
+              <div class="labelsWrap">
+                <span>
+                  számviteli szabályzatok
+                </span>
+                <span>
+                  TB JÁRULÉK
+                </span>
+              </div>
+              <p>
+                A vállalkozásokat és az állami szervezeteket egyaránt széles körben érintő új adatkezelési szabályrendszer, a GDPR a társaságok sajátos csoportját képező nonprofit szervezetek körére is új előírásokat tartalmaz. A szabályok pontos alkalmazását szolgálta a Nemzeti Adatvédelmi és Információszabadság Hatóság e témakörben közzétett állásfoglalása, amit az alábbiakban vázlatosan összegzünk.
+              </p>
+              <div class="date">
+                <div class="clockIcon">
+                  2018.01.21.
+                </div>
+              </div>
+            </div>
+          </article>
+          <div class="buttonWrap">
+            <button class="hollow">
+              További cikkek betöltése
+            </button>
+          </div>
         </div>
       </div>
     </div>
