--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="container">
     <div class="side leftSide">
-      <a href="/">
+      <a routerLink="/">
         <img src="/assets/img/logoLight.svg" alt="">
       </a>
     </div>
