--- a/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.scss
@@ -1,6 +1,7 @@
 @import "../../../varsAndMixins.scss";
 
 .interests{
+  margin-bottom: 50px;
   p{
     font-weight: 700;
   }
@@ -10,10 +11,19 @@
 }
 
 .articlesList{
+  margin-bottom: 160px;
   article{
     background-color: white;
     padding: 30px 40px 20px 40px;
+    margin-bottom: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    @media(max-width: 575px){
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    &:last-child{
+      margin-bottom: 0;
+    }
     p{
       margin-top: 20px;
       color: $dark2;
@@ -24,5 +34,53 @@
       margin-top: 5px;
       color: $darkBlue;
     }
+    &.withPic{
+      padding: 0;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      @media(max-width: 991px){
+        grid-template-columns: 1fr;
+      }
+      .leftSide{
+        padding: 30px 40px;
+        background-image: url("/assets/pic/cikkpic.jpg");
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        @media(max-width: 575px){
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+        &::before{
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          height: 100%;
+          background: linear-gradient(178.95deg, rgba(0, 0, 0, 0.85) 0.9%, rgba(0, 0, 0, 0) 99.1%);
+        }
+        h5{
+          color: white;
+          position: relative;
+          line-height: 25px;
+        }
+      }
+      .rightSide{
+        padding: 30px 30px 20px 30px;
+        @media(max-width: 575px){
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+        .labelsWrap{
+          margin-top: 0;
+        }
+      }
+    }
+  }
+  .buttonWrap{
+    text-align: center;
+    margin-top: 50px;
   }
 }
