--- a/JegyzoInfo/ClientApp/src/app/components/back/back.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/back/back.component.html
@@ -1,5 +1,8 @@
-<div class="backButtonWrap">
-  <button class="backButton" (click)="back()">
-    Vissza
-  </button>
+<div class="backWrap">
+  <div class="buttonWrap">
+    <button class="backButton" (click)="back()">
+      Vissza
+    </button>
+  </div>
+  <ng-content></ng-content>
 </div>
