--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -149,3 +149,10 @@ button, button:focus{
     }
   }
 }
+
+.download{
+  &::before{
+    content: url("/assets/img/download.svg");
+    margin-right: 8px;
+  }
+}
