--- a/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
@@ -2,8 +2,8 @@
   <app-back>
     <div class="searcher">
       <div class="leftSide">
-        <input class="inText" type="text" />
-        <input class="inPar" type="text" />
+        <input class="inText" type="text" placeholder="Keressen a szövegben" />
+        <input class="inPar" type="text" placeholder="Írja be a keresett paragrafus számát" />
       </div>
       <div class="rightSide">
         <button class="defaultBlue">
