--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -75,7 +75,7 @@
     </h1>
     <app-topics></app-topics>
     <div class="buttonWrap">
-      <button class="hollow">
+      <button class="hollow" routerLink="/tudastar">
         Tovább a tudástár teljes tartalmához
       </button>
     </div>
