--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.scss
@@ -12,6 +12,9 @@
     ul{
       margin-top: 20px;
       padding-left: 30px;
+      @media(max-width: 575px){
+        padding-left: 0;
+      }
       li{
         background-image: url("/assets/img/blueSquare.svg");
         background-repeat: no-repeat;
