--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -145,10 +145,10 @@
           Kapcsolódó jogszabályok
         </h5>
         <div class="chaptersWrap">
-          <div class="chapter chapterJsz">
+          <div class="chapter chapterJsz" routerLink="/jogszabaly">
             5/2003. (II. 19.) ESzCsM rendelet
           </div>
-          <div class="chapter chapterJsz">
+          <div class="chapter chapterJsz" routerLink="/jogszabaly">
             2017. évi CLIII. törvény az adóhatóság által foganatosítandó végrehajtási eljárásokról
           </div>
         </div>
