--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -183,6 +183,7 @@
             box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
             padding: 19px 40px;
             margin-bottom: 10px;
+            cursor: pointer;
             &.chapterJsz{
               color: $blueStandard;
             }
