--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
@@ -17,6 +17,11 @@
         Gazdálkodási jogkörök, kötelezettségvállalás, pénzügyi ellenjegyzés és teljesítésigazolás
       </li>
     </ul>
+    <div class="openTopic">
+      <a class="arrorange" routerLink="/topic">
+        Téma megnyitása
+      </a>
+    </div>
   </section>
 </div>
 
@@ -39,6 +44,11 @@
         Gazdálkodási jogkörök, kötelezettségvállalás, pénzügyi ellenjegyzés és teljesítésigazolás
       </li>
     </ul>
+    <div class="openTopic">
+      <a class="arrorange" routerLink="/topic">
+        Téma megnyitása
+      </a>
+    </div>
   </section>
 </div>
 
@@ -73,5 +83,10 @@
         Ügymenetvizsgálat
       </li>
     </ul>
+    <div class="openTopic">
+      <a class="arrorange" routerLink="/topic">
+        Téma megnyitása
+      </a>
+    </div>
   </section>
 </div>
