--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -8,6 +8,7 @@ body{
   font-size: 16px;
   background-color: #E5E5E5 !important;
   color: $dark;
+  overflow-y: scroll;
 }
 a, a:hover, a:visited{ color: inherit !important; text-decoration: none !important;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
