--- a/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 50px;
     width: 78px;
     background-color: $blue;
   }
