--- a/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
@@ -6,7 +6,9 @@
     </h1>
   </div>
   <div class="chaptersWrap">
+    <app-chapter></app-chapter>
     <app-chapter [opened]="true"></app-chapter>
+    <app-chapter></app-chapter>
     <app-chapter></app-chapter>
     <app-chapter></app-chapter>
   </div>
