--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
@@ -39,6 +39,11 @@
           </div>
         </ng-template>
       </ngb-carousel>
+      <div class="ctaWrap">
+        <button class="defaultBlue" routerLink="/videos">
+          Tovább a teljes videókhoz
+        </button>
+      </div>
     </div>
   </div>
 </div>
