--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -39,6 +39,10 @@ h6{
   font-weight: 700;
 }
 
+.orange{
+  color: $orange;
+}
+
 button, button:focus{
   padding: 11px 35px;
   font-size: 16px;
@@ -120,6 +124,11 @@ button, button:focus{
     margin-right: 10px;
     margin-bottom: 5px;
   }
+}
+
+.shadowedBoxWhite{
+  background-color: white;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.13);
 }
 
 .myCheckbox{
