--- a/JegyzoInfo/ClientApp/src/app/pages/courses-page/courses-page.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/courses-page/courses-page.component.html
@@ -28,7 +28,9 @@
 
         </div>
       </div>
-      <div class="col-lg-6 rightSide"></div>
+      <div class="col-lg-6 rightSide">
+        <img src="/assets/img/housefeeling2.svg" alt="" />
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-8">
@@ -41,4 +43,12 @@
       </div>
     </div>
   </div>
+  <div class="coursesWrap">
+    <h4>
+      Képzéseink
+    </h4>
+    <app-course></app-course>
+    <app-course></app-course>
+  </div>
 </div>
+
