--- a/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="buttonWrap">
-            <button class="hollow">
+            <button class="hollow" routerLink="/courses">
               Megnézem a részleteket
             </button>
           </div>
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="buttonWrap">
-            <button class="hollow">
+            <button class="hollow" routerLink="/courses">
               Megnézem a részleteket
             </button>
           </div>
