--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -65,6 +65,9 @@ nav{
               width: 100%;
             }
           }
+          a{
+            cursor: pointer;
+          }
           hr{
             transition: 0.2s linear;
             width: 0;
@@ -74,31 +77,6 @@ nav{
             margin-right: auto;
             height: 3px;
           }
-        }
-      }
-      ul.login{
-        display: none;
-        position: absolute;
-        right: 0;
-        z-index: 1500;
-        background-color: $blue;
-        padding: 15px;
-        border: 1px solid white;
-        input{
-          border: 0;
-          background-color: white;
-          font-size: 14px;
-          width: 230px;
-          padding: 4px 16px;
-        }
-        li{
-          margin-bottom: 10px !important;
-          &:last-child{
-            margin-bottom: 0 !important;
-          }
-        }
-        &.opened{
-          display: block;
         }
       }
     }
