--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -14,6 +14,7 @@ a, a:hover, a:visited{ color: inherit !important; text-decoration: none !importa
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
 hr{ border: 0; height: 2px; border-radius: 2px; background-color: $blue; width: 100%; }
 ul{ list-style: none; }
+*, *:focus{outline: none !important;}
 
 h1{
   font-size: 30px !important;
