--- a/JegyzoInfo/ClientApp/src/app/pages/knowledge-base/knowledge-base.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/knowledge-base/knowledge-base.component.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
     </div>
-    <app-topics></app-topics>
+    <app-topics [folyamats]="folyamats"></app-topics>
     <div class="buttonWrap">
       <button class="orange" routerLink="/tudastar">
         Érdekel az előfizetés
