--- a/JegyzoInfo/ClientApp/src/app/components/topics/topics.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/topics/topics.component.html
@@ -1,4 +1,5 @@
 <div class="topicsWrap">
-  <app-topic></app-topic>
-
+  <ng-container *ngFor="let folyamat of folyamats">
+    <app-topic [folyamat]="folyamat"></app-topic>
+  </ng-container>
 </div>
