--- a/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
@@ -5,11 +5,9 @@
       Településképi arculati kézikönyv
     </h1>
   </div>
-  <div class="chaptersWrap">
-    <app-chapter></app-chapter>
-    <app-chapter [opened]="true"></app-chapter>
-    <app-chapter></app-chapter>
-    <app-chapter></app-chapter>
-    <app-chapter></app-chapter>
+  <div *ngIf="folyamat" class="chaptersWrap">
+    <ng-container *ngFor="let folyamat of folyamat.folyamatok">
+      <app-chapter *ngIf="!folyamat.torolve" [folyamat]="folyamat" [parentFolyamat]="folyamat" [opened]="false"></app-chapter>
+    </ng-container>
   </div>
 </div>
