--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -7,20 +7,20 @@
     </div>
     <div class="side rightSide">
       <ul class="defaultMenu" [class.opened]="menuIsOpened">
-        <li class="on">
-          <a>
+        <li>
+          <a pageScroll href="#scrollTudastar">
             Tudástár
           </a>
           <hr/>
         </li>
         <li>
-          <a>
+          <a pageScroll href="#scrollVideos">
             Videotár
           </a>
           <hr/>
         </li>
         <li>
-          <a>
+          <a pageScroll href="#scrollCourses">
             Online képzéseink
           </a>
           <hr/>
