--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -68,7 +68,7 @@
   </div>
 </header>
 
-<div class="topics">
+<div class="topics" id="scrollTudastar">
   <div class="container">
     <h1>
       KIEMELT TÉMÁINK
@@ -82,11 +82,11 @@
   </div>
 </div>
 
-<div class="videos">
+<div class="videos" id="scrollVideos">
   <app-videos></app-videos>
 </div>
 
-<div class="onlineCourses">
+<div class="onlineCourses" id="scrollCourses">
   <app-online-courses></app-online-courses>
 </div>
 
